commit after tests and the creation of README file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,43 @@
-version: '2'
+version: '3'
+
 services:
   db:
     image: mysql:5.7
-    restart: always
+    volumes:
+     - ../volumes/db_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: noteapp
       MYSQL_USER: appuser
       MYSQL_PASSWORD: password
-    ports:
-      - "3307:3306"
-  app:
-    build: .
+
+  web:
+    build:
+      context: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
-    volumes:
-      - ".:/noteapp"
+    working_dir: /usr/src/app
+    restart: always
     ports:
-      - "3001:3000"
+      - "80:3000"
+    volumes:
+      - ./:/usr/src/app
     depends_on:
       - db
-    links:
-      - db
+      - redis
     environment:
       DB_USER: root
       DB_NAME: noteapp
       DB_PASSWORD: password
       DB_HOST: db
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+        - 8080:8080
+
+  redis:
+    image: redis
+
+volumes:
+   db_data:
